--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,33 @@
-greenlet==3.2.1
-SQLAlchemy==2.0.40
-typing_extensions==4.13.2
+annotated-types       
+anyio                 
+bcrypt                
+cffi                  
+click                 
+colorama              
+cryptography          
+dnspython             
+ecdsa                 
+email_validator       
+fastapi               
+greenlet              
+h11                   
+idna                  
+mysql-connector-python
+passlib               
+pip                   
+pyasn1                
+pycparser             
+pydantic              
+pydantic_core         
+PyMySQL               
+python-dotenv         
+python-jose           
+python-multipart      
+rsa                   
+six                   
+sniffio               
+SQLAlchemy            
+starlette             
+typing_extensions     
+typing-inspection     
+uvicorn               
